# discord_bodoge_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  index.html  pyproject.toml  readme.md  run.py
lib/: bodoge_bot.py  flask_server.py  image_process.py  image_source_server.py
tests/: test_discord_bodoge.py
