[tool.poetry]
name = "discord_bodoge"
version = "0.1.0"
description = ""
authors = ["yuji nunome <yuji.dis@gail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
jupyterlab = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
opencv-python = "^4.5.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
